--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,7 +1,7 @@
-<table class="center">
+<table class="left">
   <thead>
     <tr>
-      <th id="alphabetical" class="desc">Role</th>
+      <th id="alphabetical" class="active asc">Role</th>
       <th id="line_count" class="asc">Number of Lines</th>
       <th id="longest_speech" class="asc">Longest Speech</th>
       <th id="scene_count" class="asc">Number of Scenes</th>
