converted app to use datatables.js

--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -1,12 +1,12 @@
 <h1><%= @play.title %></h1>
-<table class="left">
+<table id="roles" class="display" >
   <thead>
     <tr>
-      <th id="alphabetical" class="active asc">Role</th>
-      <th id="line_count" class="asc">Number of Lines</th>
-      <th id="longest_speech" class="asc">Longest Speech</th>
-      <th id="scene_count" class="asc">Number of Scenes</th>
-      <th id="scene_percentage" class="asc">Percentage of Scenes</th>
+      <th>Role</th>
+      <th>Number of Lines</th>
+      <th>Longest Speech</th>
+      <th>Number of Scenes</th>
+      <th>Percentage of Scenes</th>
     </tr>
 
   </thead>
