--- a/app/views/roles/_role.html.erb
+++ b/app/views/roles/_role.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= role.name %></td>
   <td><%= role.number_of_lines %></td>
-  <td><%= "(#{role.longest_speech_length} lines) #{truncate(role.longest_speech.to_s, length: 40)}" %></td>
+  <td><%= display_longest_speech(role)%></td>
   <td><%= role.number_of_scenes %></td>
   <td><%= format_percentage(role.percentage_of_scenes) %></td>
 </tr>
